# hopital_control_tower

./: .gitignore  CONTRIBUTING.md  LICENSE.md  NOTICE.md  README.md  alembic.ini  cleanup.sh  databricks.yml  deploy.sh  pyproject.toml  setup.sh  variables.yml
.cursor/: mcp.json
app/: api_server.py  app.yaml  app.yaml.template  env.template  eslintrc.cjs  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.js  vite.config.js
app/agent/: __init__.py  autonomous.py  config.py  graph.py  orchestrator.py  tools.py
app/docs/: AGENT_ARCHITECTURE.md  GAP_ANALYSIS.md  LAKEBASE_SETUP.md  QUICK_REFERENCE.md  SA_EDUCATION.md  WALKTHROUGH.md
app/src/: App.jsx  index.css
data/sop_samples/: IPS_001_Investment_Policy_Statement.txt  IPS_002_Due_Diligence_Checklist.txt  IPS_003_Allocation_Policy.txt  IPS_004_Liquidity_Policy.txt  IPS_005_Compliance_Procedures.txt  SOP_001_Discharge_Planning.txt  SOP_002_ED_Throughput.txt  SOP_003_Drug_Cost_Management.txt
docs/: BUILDING_AGENTS.md  GAP_ANALYSIS.md  LAKEBASE_SETUP.md  QUICK_REFERENCE.md  SA_EDUCATION.md  WALKTHROUGH.md
notebooks/: 00_generate_data.py  01_setup_lakebase.py  02_setup_vector_search.py  03_grant_permissions.py  04_diagnostic_check.py  05_setup_sop_vector_search.py  06_simplify_data_model.py  07_generate_batches.py  08_setup_lakebase_migrations.py
resources/: apps.yml  jobs.yml
src/: __init__.py
src/agent/: README.md  __init__.py  graph.py  heartbeat.py  orchestrator.py  tools.py
src/db/: __init__.py  connection.py
src/models/: __init__.py  analysis.py
(+14 files in other folders)
